fix: autocomplete dark mode

--- a/src/static/styles/ui.scss
+++ b/src/static/styles/ui.scss
@@ -973,8 +973,9 @@ a.ui-button {
     &:-webkit-autofill:hover,
     &:-webkit-autofill:focus,
     &:-webkit-autofill:active {
-        transition: background-color 5000s ease-in-out 0s;
-        -webkit-text-fill-color: inherit !important;
+        transition: background-color 5000s ease-in-out 0s,
+            color 5000s ease-in-out;
+        -webkit-text-fill-color: currentColor !important;
     }
 }
 .ui-input-text__input[readonly] {
